--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,16 @@ html {
 }
 
 /* Animation */
+.App {
+  position: relative;
+  z-index: 0;
+}
 
+#content {
+  position: relative;
+  z-index: 10;
+  padding: 2rem;
+}
 .fade-in-section {
   opacity: 0;
   transform: translateY(10vh);
