--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,12 +1,12 @@
 :root {
-  --dark-navy: #10041f; /* dark-purple */
-  --navy: #0c0514; /* purple */
-  --light-navy: #170925; /* light-purple */
-  --lightest-navy: #331950; /* lightest-purple */
-  --navy-shadow: rgba(2, 12, 27, 0.7);
+  --navy: #1c0a29; /* purple */
+  --linear-gradient: linear-gradient(to bottom,#0d0e22 0%,#000000 20%,#000000 100%);
+  --light-navy: linear-gradient(to bottom,hsl(236, 63%, 19%) 0%,#2b2450 20%,#2f133b 100%);
+  --light-grey: #282729; /* lightest-purple */
+  --navy-shadow: rgba(26, 55, 100, 0.7);
   --slate: #8892b0;
   --light-slate: #a8b2d1;
-  --lightest-slate: #ccd6f6;
+  --lightest-slate: #ffffff;
   --white: #e6f1ff;
   --green-bright: #7187e9; /* light-blue */
   --green-tint: rgba(100, 255, 218, 0.1);
