--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -25,7 +25,7 @@ min-height: 50vh;
   position: relative;
   height: 100%;
   padding: 2rem 1.75rem;
-  background-color: var(--light-navy);
+  background: var(--light-navy);
   border-radius: 16px;
 }
 
