--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -58,21 +58,21 @@ min-height: 50vh;
 }
 
 .card-title {
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   color: var(--lightest-slate);
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
 }
 
 .card-desc {
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   color: var(--slate);
-  font-size: 18px;
+  font-size: 15px;
   padding-bottom: 40px;
 }
 
 .card-tech {
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   color: var(--slate);
   font-size: 16px;
 }
@@ -101,7 +101,7 @@ min-height: 50vh;
 }
 
 .carousel-caption {
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   max-width: 500px;
   right: unset !important;
   left: 25% !important;
@@ -115,14 +115,14 @@ min-height: 50vh;
 }
 
 .carousel-caption p {
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   font-weight: bold;
   font-size: 18px;
   color: var(--lightest-slate);
 }
 
 .carousel-caption p.techStack {
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 14px;
   font-weight: bold;
   color: var(--green-bright);
