--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -9,18 +9,10 @@
   min-height: 100vh;
 }
 
-#globe-model {
-  width: unset;
-  height: 60vh; /* or try 80vh or 60vh for tighter layout */
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-}
-
 .Typist {
   color: var(--lightest-slate);
   text-align: center;
-  font-size: 76px;
+  font-size: 45px;
   margin-top: -30px;
 }
 .Typist .Cursor--blinking {
@@ -29,40 +21,40 @@
 }
 
 .intro-title {
-  font-family: "NTR", sans-serif;
-  font-size: 86px;
+  font-family: Inter, sans-serif;
+  font-size: 60px;
 }
 .intro-name {
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   color: var(--green-bright);
   font-weight: bold;
-  font-size: 86px;
+  font-size: 60px;
 }
 
 .intro-subtitle {
-  margin-top: -36px;
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   color: var(--slate);
   text-align: center;
   font-weight: 300;
-  font-size: 48px;
+  font-size: 32px;
 }
 
 .intro-desc {
   color: var(--slate);
-  font-family: "NTR", sans-serif;
-  font-size: 22px;
+  margin-top: 10px;
+  font-family: Inter, sans-serif;
+  font-size: 20px;
   text-align: center;
   max-width: 800px;
   padding-bottom: 50px;
 }
 
 .intro-contact {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: bolder;
-  font-family: "NTR", sans-serif;
+  font-family: Inter, sans-serif;
   align-self: center;
-  padding: 10px 30px;
+  padding: 15px 30px;
   cursor: pointer;
   border: 1px solid var(--green-bright);
   border-radius: 4px;
@@ -86,28 +78,28 @@ b {
   }
 
   .intro-title {
-    font-size: 46px;
+    font-size: 36px;
   }
   .intro-name {
-    font-size: 46px;
+    font-size: 36px;
   }
 
   .Typist {
-    font-size: 36px;
+    font-size: 28px;
   }
 
   .intro-subtitle {
     margin: 0;
-    font-size: 28px;
+    font-size: 20px;
   }
 
   .intro-desc {
-    font-size: 18px;
+    font-size: 14px;
     max-width: unset;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
   }
 
   .intro-contact {
-    font-size: 16px;
+    font-size: 8px;
   }
 }
