--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,7 +1,7 @@
 :root {
-  --navy: #1c0a29; /* purple */
+  --purple: #1c0a29;
   --linear-gradient: linear-gradient(to bottom,#1c0a29 0%,#0E192D 18%,#0E192D 100%);
-  --light-navy: linear-gradient(to bottom,hsl(236, 63%, 19%) 0%,#2b2450 20%,#2f133b 100%);
+  --navy: #0E192D;
   --light-grey: #1e4855; /* lightest-purple */
   --navy-shadow: rgba(26, 55, 100, 0.7);
   --slate: #8892b0;
