--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -25,7 +25,7 @@ min-height: 50vh;
   position: relative;
   height: 100%;
   padding: 2rem 1.75rem;
-  background: var(--linear-gradient);
+  background-color: var(---navy);
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
   border-radius: 16px;
 }
