--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -54,8 +54,9 @@
 }
 
   @media only screen and (max-width: 600px) {
-    .navbar-light .navbar-brand  {
-        display: none;
+    .nav-link.navbar-brand  {
+        display: flex;
+        
     }
   
     .navbar-light .navbar-nav.me-auto .nav-link {
