--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,14 +2,12 @@
     background-color: rgba(14, 25, 45, 0.1);
     box-shadow: 0 1px 6px rgb(24, 24, 32);
     font-family: Inter, sans-serif;
-    font-weight: 800;
+    font-weight: 600;
     line-height: 2;
     font-size: 1rem;
     backdrop-filter: blur(24px);
   }
 
-  /* Remove shadow and increase padding when at top */
-/* NavBar.css */
 .navbar-animated {
   box-shadow: 0 4px 24px rgba(0, 0, 0, 0.24);
   padding: 0px, 10px;
@@ -27,19 +25,24 @@
   transform: translateY(0);
 }
 
-  .navbar-light .navbar-brand  {
+.navbar-light .navbar-brand  {
     color: var(--lightest-slate) !important;
   }
 
-  .navbar-light .navbar-nav .nav-link {
+.navbar-light .navbar-nav .nav-link {
     color: var(--lightest-slate) !important;
   }
 
-  .navbar-light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link:hover {
     color: var(--green-bright) !important;
   }
 
-.logo-animated {
+.star-active svg {
+  color: var(--green-bright);
+  fill: currentColor;
+}
+
+.logo {
   transition: 
     box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1),
     transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -47,9 +50,9 @@
   will-change: transform, box-shadow;
 }
 
-.logo-animated:hover,
-.logo-animated:focus {
-  transform: translate3d(-2px, -2px, 0);
+.logo:hover,
+.logo:focus {
+  transform: translate3d(-3px, -3px, 0);
   outline: none;
 }
 
