--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -79,13 +79,13 @@
   }
 
   .about-description {
-    font-size: 16px;
-    text-align: justify;
+    font-size: 15px;
+    text-align: left;
   }
 
   .about-description a,
   .about-description b {
-    font-size: 16px;
+    font-size: 15px;
   }
 
   .about-image img {
