--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,13 +1,13 @@
 :root {
   --purple: #1c0a29;
-  --linear-gradient: linear-gradient(to bottom,#1c0a29 0%,#0E192D 18%,#1c0a29 40%, #0E192D 75%,#1c0a29 100%);
+  --linear-gradient: linear-gradient(to bottom,#1c0a29 0%,#0E192D 25%,#1c0a29 40%, #0E192D 75%,#1c0a29 100%);
   --navy: #0E192D;
   --light-grey: #1e4855; /* lightest-purple */
   --navy-shadow: rgba(26, 55, 100, 0.7);
   --slate: #8892b0;
   --light-slate: #a8b2d1;
-  --lightest-slate: #ffffff;
+  --off-white: #ccd6f6;
   --white: #e6f1ff;
-  --green-bright: #26E2A9; /* light-blue */
+  --green-bright: #26E2A9;
   --green-tint: rgba(100, 255, 218, 0.1);
 }
