--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: rgba(14, 25, 45, 0.1);
+    background: rgba(22, 2, 34, 0.1);
     box-shadow: 0 1px 6px rgb(24, 24, 32);
     font-family: Inter, sans-serif;
     font-weight: 600;
