--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -35,7 +35,7 @@
 }
 
 .about-description {
-  font-family: Inter, sans-serif;
+  font-family: "NTR", sans-serif;
   color: var(--slate);
   max-width: 600px;
   font-size: 17px;
@@ -62,10 +62,14 @@
   box-shadow: 6px 13px 23px -5px rgba(0, 0, 0, 0.46);
   border: none;
 }
-
-@media only screen and (max-width: 788px) {
+@media only screen and (max-width: 1000px) {
   .about-image img {
     max-width: 200px;
+  }
+}
+@media only screen and (max-width: 750px) {
+  .about-image img {
+    max-width: 150px;
   }
 }
 
