UPDATE Small Issues Fixed with CSS Styling

--- a/src/styles/Credits.css
+++ b/src/styles/Credits.css
@@ -1,6 +1,6 @@
 #credits {
+  padding-top: 40px;
   align-items: center;
-  padding-top: 80px;
 }
 
 .ending-credits {
@@ -16,3 +16,28 @@
   text-decoration: underline;
   font-family: inherit;
 }
+
+.ending-credits .side-navbar {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .ending-credits .side-navbar {
+    display: flex;
+    position: inherit;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    padding: 12px 0;
+  }
+
+  .ending-credits .side-navbar .side-navbar-divider {
+    display: none;
+  }
+
+  .ending-credits .side-navbar button.star-btn {
+    display: none;
+  }
+
+}
+
