--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -16,7 +16,7 @@
 }
 
 .navbar-at-top {
-  box-shadow: none !important;
+  box-shadow:none !important;
   padding: 20px 60px !important;
 }
 .navbar-animated.navbar-hidden {
@@ -42,6 +42,10 @@
     scale:1.1;
     transition: var(--transition);
   }
+
+.navbar-star-btn {
+  display: none;
+}
 
 .logo {
     display: flex;
@@ -77,21 +81,35 @@
 
 @media only screen and (max-width: 600px) {
   .navbar {
-      margin-left: 0px;
-      padding: 10px 25px !important;
+      padding: 10px 20px !important;
       background: rgba(22, 2, 34, 0.1);
       box-shadow: 0 1px 6px rgb(24, 24, 32);
+      align-items: center;
+      justify-content: center;
     }
   .navbar-at-top {
-  box-shadow: none !important;
-  padding: 20px 25px !important;
+      box-shadow: none !important;
+      padding: 20px 20px !important;
+      align-items: center;
+      justify-content: center;
 }
   .navbar-nav .nav-link {
       color: var(--off-white) !important;
-      margin: 0 auto;
     }
   .logo .navbar-nav.me-auto {
       display: flex;
     }
+  .navbar-star-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: none;
+      border: none;
+      padding-right: 10px;
+      margin: 0 10px 0 5px;
+      color: var(--off-white);
+      font-size: 0.9rem;
+      cursor: pointer;
+    }
+  
 }
-
