--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -5,7 +5,7 @@
   text-align: center;
   margin: auto;
   max-width: 1000px;
-  padding-top: 250px;
+  padding-top: 200px;
   min-height: 100vh;
 }
 
@@ -18,6 +18,20 @@
 .Typist .Cursor--blinking {
   color: var(--green-bright);
   padding-left: 4px;
+}
+
+
+.intro-stars-tip {
+  font-size: 0.95rem;
+  color: var(--green-bright, #26e2aa);
+  text-align: center;
+}
+
+.stars-typist {
+  color: var(--off-white);
+  text-align: center;
+  font-size: 20px;
+  margin-top: -30px;
 }
 
 .intro-title {
@@ -70,7 +84,7 @@ b {
 
 @media only screen and (max-width: 600px) {
   #intro {
-    padding-top: 50px;
+    padding-top: 20px;
     margin: 0;
     align-items: center;
   }
@@ -98,6 +112,16 @@ b {
   .intro-desc {
     font-size: 15px;
     max-width: unset;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
   }
+  .intro-stars-tip {
+    font-size: 15px;
+    max-width: unset;
+}
+
+  .stars-typist {
+    color: var(--off-white);
+    text-align: center;
+    font-size: 15px;
+}
 }
