--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -5,14 +5,14 @@
   text-align: center;
   margin: auto;
   max-width: 1000px;
-  padding-top: 200px;
-  min-height: 100vh;
+  margin-top: 200px;
+  min-height: 100vh
 }
 
 .Typist {
   color: var(--off-white);
   text-align: center;
-  font-size: 60px;
+  font-size: 66px;
   margin-top: -30px;
 }
 .Typist .Cursor--blinking {
@@ -21,41 +21,31 @@
 }
 
 
-.intro-stars-tip {
-  font-size: 0.95rem;
-  color: var(--green-bright, #26e2aa);
-  text-align: center;
-}
-
-.stars-typist {
-  color: var(--off-white);
-  text-align: center;
-  font-size: 20px;
-  margin-top: -30px;
-}
-
 .intro-title {
+  color: var(--off-white);
   font-family: "NTR", sans-serif;
-  font-size: 60px;
+  font-weight: 200;
+  font-size: 66px;
 }
 .intro-name {
   font-family: "NTR", sans-serif;
   color: var(--green-bright);
   font-weight: bold;
-  font-size: 60px;
+  font-size: 72px;
 }
 
 .intro-subtitle {
   font-family: "NTR", sans-serif;
-  color: var(--slate);
+  color: var(--off-white);
   text-align: center;
-  font-weight: 300;
-  font-size: 32px;
+  margin-top: -20px;
+  margin-bottom: 20px;
+  font-size: 36px;
 }
 
 .intro-desc {
-  color: var(--slate);
-  margin-top: 10px;
+  color: var(--off-white);
+  margin-top: -30px;
   font-family: "NTR", sans-serif;
   font-size: 20px;
   text-align: center;
@@ -63,30 +53,66 @@
   padding-bottom: 50px;
 }
 
-.intro-contact {
-  font-size: 18px;
-  font-weight: bolder;
-  font-family: "NTR", sans-serif;
-  align-self: center;
-  padding: 15px 30px;
+.intro-stars-tip {
+  font-size: 20px;
+  color: var(--green-bright);
+  text-align: center;
+}
+.stars-typist {
+  color: var(--off-white);
+  text-align: center;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.intro-click-here {
+  color: var(--green-bright);
+  text-align: center;
+  font-size: 20px;
+  margin-top: -30px;
+  margin-bottom: -10px;
+}
+
+.intro-popup-overlay {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  color: rgba(0,0,0,0.4);
+  z-index: 1000;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.intro-popup {
+  background: #0f0f00;
+  color: #fff;
+  padding: 28px 36px;
+  border-radius: 14px;
+  box-shadow: 0 8px 32px #000a;
+  z-index: 1001;
+  max-width: 350;
+  text-align: center;
+}
+
+.intro-question-mark {
+  color: var(--green-bright);
   cursor: pointer;
-  border: 1px solid var(--green-bright);
-  border-radius: 4px;
+  margin-left: 4;
+  font-weight: bold;
+  font-size: 1.2em;
+  filter: drop-shadow(0 3px 4px rgba(241, 255, 39, 0.74));
 }
 
-.intro-contact:hover {
-  background-color: var(--lightest-navy);
-}
-
-b {
-  font-size: 17px;
+.popup-text {
+  color: #ccd6f6;
+  font-weight: bold;
 }
 
 @media only screen and (max-width: 600px) {
   #intro {
-    padding-top: 20px;
-    margin: 0;
     align-items: center;
+    margin-top: 90px;
   }
 
   .intro-title {
@@ -102,17 +128,13 @@ b {
   }
 
   .intro-subtitle {
-    margin: 0;
     font-size: 18px;
-    font-weight: 400;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    margin-top: -10px;  
   }
 
   .intro-desc {
-    font-size: 15px;
+    font-size: 16px;
     max-width: unset;
-    padding-bottom: 40px;
   }
   .intro-stars-tip {
     font-size: 15px;
@@ -124,4 +146,20 @@ b {
     text-align: center;
     font-size: 15px;
 }
+.intro-click-here {
+  font-size: 16px;
+}
+}
+
+@media only screen and (min-width: 2000px) {
+  #intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  max-width: 1000px;
+  margin-top: 400px;
+  min-height: 100vh
+  }
 }
