--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,8 +1,8 @@
 #about {
   min-height: 50vh;
   margin: auto;
-  max-width: 1000px;
-  padding-top: 100px;
+  max-width: 1000px;  
+  padding-bottom: 100px;
 }
 
 .about-description ul {
@@ -19,12 +19,12 @@
   position: relative;
   padding-left: 20px;
   font-size: 16px;
-  color: var(--slate);
+  color: var(--off-white);
 }
 
 .about-description li::before {
   content: "▹    ";
-  color: var(--green-bright);
+  color: var(--yellow-bright);
   position: absolute;
   left: 0;
 }
@@ -36,7 +36,7 @@
 
 .about-description {
   font-family: "NTR", sans-serif;
-  color: var(--slate);
+  color: var(--off-white);
   max-width: 600px;
   font-size: 17px;
   text-align: left;
@@ -50,39 +50,12 @@
   font-weight: bold;
 }
 
-.about-image {
-  padding-left: 40px;
-}
-
-.about-image img {
-  max-width: 300px;
-  height: auto;
-  border-radius: 10px;
-  margin-left: 30px;
-  box-shadow: 6px 13px 23px -5px rgba(0, 0, 0, 0.46);
-  border: none;
-}
-@media only screen and (max-width: 1000px) {
-  .about-image img {
-    max-width: 200px;
-  }
-}
-@media only screen and (max-width: 750px) {
-  .about-image img {
-    max-width: 150px;
-  }
-}
-
-.about-image:hover {
-  transform: translateY(-7px);
-}
-
 @media only screen and (max-width: 600px) {
   #about {
     height: unset;
     padding-left: unset;
     padding-right: unset;
-    padding-top: 30%;
+    padding-top: 0;
   }
 
   .about-description {
@@ -93,10 +66,6 @@
   .about-description a,
   .about-description b {
     font-size: 15px;
-  }
-
-  .about-image img {
-    display: none;
   }
 
   .about-content {
