--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,13 +1,16 @@
 #experience {
   min-height: 50vh;
   margin: auto;
-  max-width: 1000px;
-  padding-top: 100px;
+  max-width: 750px;
+  align-content: center;
+  justify-content: center;
+  padding-top: 200px;
+  padding-bottom: 100px;
 }
 
 .joblist-job-title {
   font-family: "NTR", sans-serif;
-  font-size: 24px;
+  font-size: 30px;
   font-weight: bold;
   color: var(--off-white);
 }
@@ -15,14 +18,14 @@
 .joblist-job-company {
   font-family: "NTR", sans-serif;
   font-size: 24px;
-  color: var(--green-bright);
+  color: var(--yellow-bright);
   font-weight: bold;
 }
 
 .joblist-duration {
   font-family: "NTR", sans-serif;
   font-size: 14px;
-  color: var(--slate);
+  color: var(--off-white);
 }
 
 #vertical-tabpanel {
@@ -43,29 +46,30 @@
 }
 
 .PrivateTabIndicator-colorSecondary-5 {
-  background-color: var(--green-bright) !important;
+  background-color: var(--yellow-bright) !important;
 }
+
 .jss5 {
-  background-color: var(--green-bright) !important;
+  background-color: var(--yellow-bright) !important;
 }
+
 .makeStyles-tabs-2 {
-  border-right: 1px solid var(--lightest-navy) !important;
+  border-right: 1px solid var(--navy) !important;
 }
 #experience .MuiTab-root {
   padding: 6px 20px;
 }
 .MuiButtonBase-root:focus {
-  color: var(--green-bright) !important;
+  color: var(--yellow-bright) !important;
 }
 
 ul {
   list-style: none;
-  margin-left: -40px;
 }
 
 .job-description li::before {
   content: "▹    ";
-  color: var(--green-bright);
+  color: var(--yellow-bright);
   position: absolute;
   left: 0;
 }
@@ -75,7 +79,7 @@ ul {
   padding-left: 30px;
   padding-bottom: 16px;
   font-size: 15px;
-  color: var(--slate);
+  color: var(--off-white);
 }
 
 .job-description {
