--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -16,7 +16,7 @@
   margin-top: -30px;
 }
 .Typist .Cursor--blinking {
-  color: var(--green-bright);
+  color: var(--yellow-bright);
   padding-left: 4px;
 }
 
@@ -29,7 +29,7 @@
 }
 .intro-name {
   font-family: "NTR", sans-serif;
-  color: var(--green-bright);
+  color: var(--yellow-bright);
   font-weight: bold;
   font-size: 72px;
 }
@@ -38,8 +38,8 @@
   font-family: "NTR", sans-serif;
   color: var(--off-white);
   text-align: center;
-  margin-top: -20px;
-  margin-bottom: 20px;
+  margin-top: -10px;
+  margin-bottom: 40px;
   font-size: 36px;
 }
 
@@ -50,12 +50,12 @@
   font-size: 20px;
   text-align: center;
   max-width: 800px;
-  padding-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .intro-stars-tip {
   font-size: 20px;
-  color: var(--green-bright);
+  color: var(--yellow-bright);
   text-align: center;
 }
 .stars-typist {
@@ -66,7 +66,7 @@
 }
 
 .intro-click-here {
-  color: var(--green-bright);
+  color: var(--yellow-bright);
   text-align: center;
   font-size: 20px;
   margin-top: -30px;
@@ -96,7 +96,7 @@
 }
 
 .intro-question-mark {
-  color: var(--green-bright);
+  color: var(--yellow-bright);
   cursor: pointer;
   margin-left: 4;
   font-weight: bold;
@@ -113,6 +113,7 @@
   #intro {
     align-items: center;
     margin-top: 90px;
+    min-height: 80vh;
   }
 
   .intro-title {
@@ -129,26 +130,27 @@
 
   .intro-subtitle {
     font-size: 18px;
-    margin-top: -10px;  
+    margin-top: 0px;  
   }
 
   .intro-desc {
     font-size: 16px;
     max-width: unset;
+    margin-bottom: 15px;
   }
   .intro-stars-tip {
     font-size: 15px;
     max-width: unset;
-}
+  }
 
   .stars-typist {
     color: var(--off-white);
     text-align: center;
     font-size: 15px;
-}
-.intro-click-here {
-  font-size: 16px;
-}
+  }
+  .intro-click-here {
+    font-size: 16px;
+  }
 }
 
 @media only screen and (min-width: 2000px) {
