--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -15,7 +15,7 @@
 
 .navbar-at-top {
   box-shadow:none !important;
-  padding: 15px 60px !important;
+  padding: 25px 60px !important;
   border-bottom: none !important;
 }
 .navbar-animated.navbar-hidden {
@@ -36,7 +36,7 @@
   }
 
 .navbar-nav .nav-link:hover {
-    color: var(--green-bright) !important;
+    color: var(--yellow-bright) !important;
     filter: drop-shadow(0 3px 4px rgba(0, 255, 85, 0.5));
     scale:1.1;
     transition: var(--transition);
@@ -76,6 +76,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .navbar-nav .nav-link[href="#timeline"] {
+    display: none !important;
+  }
   .navbar {
       padding: 10px 20px !important;
       box-shadow: 0 1px 6px rgb(24, 24, 32);
@@ -111,7 +114,7 @@
       cursor: pointer;
     }
   .navbar-star-btn:hover {
-      color: var(--green-bright) !important;
+      color: var(--yellow-bright) !important;
       filter: drop-shadow(0 3px 4px rgba(0, 255, 85, 0.5));
       scale:1.1;
       transition: var(--transition);
@@ -120,7 +123,7 @@
       content: "";
       width: 1.5px;
       height: 20px; /* or 100% if you want it to stretch */
-      background-color: var(--green-bright);
+      background-color: var(--yellow-bright);
       filter: drop-shadow(0 3px 4px rgb(0, 255, 85));
       display: flex;
       margin: 10px 10px;
